syntax = "proto3";

package core.iam;
option go_package = "github.com/ca-risken/core/proto/iam";

import "iam/entity.proto";

message ListUserRequest {
  uint32 project_id = 1;
  string name = 2;
  bool activated = 3;
  uint32 user_id = 4;
  bool admin = 5;
}

message ListUserResponse { repeated uint32 user_id = 1; }

message GetUserRequest {
  uint32 user_id = 1;
  string sub = 2;
  string user_idp_key = 3;
}

message GetUserResponse { User user = 1; }

message PutUserRequest { UserForUpsert user = 1; }

message PutUserResponse { User user = 1; }
